[gd_scene load_steps=6 format=3 uid="uid://dxo74iq1prr8o"]

[ext_resource type="Script" uid="uid://dot2fiy6k0m4q" path="res://scenes/elements/luz_mala.gd" id="1_qc5ij"]
[ext_resource type="PackedScene" uid="uid://xqj7paqu50kj" path="res://scenes/fire_fx.tscn" id="1_uhm24"]
[ext_resource type="AudioStream" uid="uid://cfe7np0ejvja0" path="res://assets/sfx/Winter winds whistle sound effect.mp3" id="3_m4rif"]
[ext_resource type="AudioStream" uid="uid://bo0l1qt1kj8v8" path="res://assets/sfx/Whistling Melody Sound Effect.mp3" id="4_wouux"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qc5ij"]
radius = 0.3

[node name="LuzMala" type="Area3D"]
collision_mask = 3
script = ExtResource("1_qc5ij")
speed = 4.0
escape_speed = 10.0

[node name="FireFX" parent="." instance=ExtResource("1_uhm24")]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.0940396, 0.595489, 0.718896, 1)
light_energy = 3.205

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_qc5ij")

[node name="WhistleFar" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_m4rif")
pitch_scale = 0.5

[node name="WhistleClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wouux")
pitch_scale = 0.7

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
